cabal-version: 2.2

name: elaborator
version: 1.0.0
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple

executable elaborate-purescript-packages
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Control.Monad.Script
    Data.Error
    Nix
    PscPackage
    PureScript
    Options
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall
  build-depends:
    base                 >= 4.12.0 && < 5,
    aeson                >= 1.4.2 && < 1.5,
    attoparsec           >= 0.13.2 && < 0.14,
    base                 >= 4.12.0 && < 4.13,
    bytestring           >= 0.10.8 && < 0.11,
    containers           >= 0.6.0 && < 0.7,
    text                 >= 1.2.3 && < 1.3,
    aeson-pretty         >= 0.8.7 && < 0.9,
    async                >= 2.2.1 && < 2.3,
    directory            >= 1.3.3 && < 1.4,
    optparse-applicative >= 0.14.3 && < 0.15,
    process              >= 1.6.5 && < 1.7,
    path                 >= 0.6.1 && < 0.7,
    path-io              >= 1.4.2 && < 1.5,
    prettyprinter        >= 1.2.1 && < 1.3,
    safe-exceptions      >= 0.1.7 && < 0.2,
