cabal-version: >=1.10

name: elaborator
version: 1.0.0
-- synopsis:
-- description:
homepage: https://github.com/jmackie/purescript.nix
bug-reports: https://github.com/jmackie/purescript.nix/issues
license: MIT
--license-file: ../LICENSE
author: Jordan Mackie
maintainer: jmackie@protonmail.com
copyright: (c) 2019 Jordan Mackie
category: Development
build-type: Simple
--extra-source-files: CHANGELOG.md

executable elaborator
  main-is: Main.hs
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.12 && <4.13,
    aeson,
    bytestring,
    text,
    attoparsec,
    aeson-pretty,
    containers,
    directory,
    filepath,
    temporary,
    kesha,
    process,
    async
  default-language: Haskell2010
